data/derived/comb/progs/unify/prog5619.ml.out
Characters 86-104:
  else digitsOfInt (n/10)::[];;
       ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
